# quantinaut

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  build.py  pyproject.toml
.github/workflows/: build.yml
data/: afts.ipynb  convert_file.py  dxy_report.md  fetch_data_ccxt.py  fetch_data_mt5.py  requirements.txt
data/backtest/: __init__.py  cfd_bars_external.py  components.py  crypto.py
data/mt5/: DXYm_Daily_202001020000_202508010000.csv  DXYm_H4_202001020000_202508012000.csv  DXYm_M15_202008020000_202508012045.csv.parquet  audusd_15min_klines.csv.parquet  eurusd_15min_klines.csv.parquet  gbpusd_15min_klines.csv.parquet
data/toolkit/: __init__.py  old_ml_strategy.py  stationarity.py  test_stationarity.py
data/ui/: .env.example  package.json  pnpm-lock.yaml
data/web/: index.html  pnpm-lock.yaml
docs/: README.md  install.md
examples/: .env.example  cfd_bars_external.py  fx_bars_external.py  fx_eurusd_bars_external.py  sandbox.py  send_telegram_notifications.py  testnet_sandbox.py
examples/backtest/: components.py  crypto.py  providers.py
examples/notebooks/: Advanced_Market_Structure_Algos.ipynb  AlphaRL.ipynb  Asset Selection Using Statistical Tests.ipynb  Crypto_Money_Flows.ipynb  LSTM_Plus_Attention.ipynb  LSTM_plus_Attn_Adv.ipynb  Market_Scan.ipynb  Market_Structure_Algorithms_2.ipynb  Market_Structure_Algos.ipynb  Model1(LSTM+Attention).ipynb  README.md
examples/sage_configs/: config-mt5-sample-1h.jsonc  config.json  config.yaml
nautilus_ai/: config.py  exceptions.py  interface.py
nautilus_ai/base_models/: BasePyTorchModel.py  BaseRegressionModel.py  MultiOutputRegressor.py
nautilus_ai/channels/: __init__.py  channel.py  web.py
nautilus_ai/classification/: BaseClassifierModel.py  BasePyTorchClassifier.py  LightGBMClassifier.py  LightGBMClassifierMultiTarget.py  PyTorchMLPClassifier.py  SKLearnRandomForestClassifier.py  XGBoostClassifier.py  XGBoostRFClassifier.py  base_model.py  base_pytorch_classifier.py  lightgbm_classifier.py  lightgbm_multitarget_classifier.py  pytorch_mlp_classifier.py  sklearn_random_forest_classifier.py  xgboost_classifier.py  xgboost_rf_classifier.py
nautilus_ai/common/: __init__.py  config.py  constants.py  data.py  enums.py  functions.py  logging.py  timerange.py  utils.py
nautilus_ai/data/: __init__.py  drawer.py  kitchen.py  types.py
nautilus_ai/edge/: __init__.py  edge_positioning.py
nautilus_ai/features/: __init__.py  f1.py  feature.py
nautilus_ai/indicators/: __init__.py  atr_vwap.py  bin_pivots.pxd  ema_python.py  linear_reg_channel.pyx  ml_indicator.py  simple_set.py  triple_barrier.py  triple_barrier_1d.py
nautilus_ai/labeling/: __init__.py  raw_return.py
nautilus_ai/labels/: __init__.py  label.py  raw_return.py
nautilus_ai/models/: BasePyTorchModel.py  (+3 more)
scripts/: download_mt5.py  download_yfinance.py  install.py  itb_offline_pipeline.py
tests/: test_labeling_raw_return.py
ui/: .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
(+171 files in other folders)
