[tool.poetry]
name = "nautilus-ai"
version = "0.1.0"
description = "An AI module for nautilus trader"
authors = ["Samuel Ojietohamen  <seekersoftec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nautilus-trader = "^1.205.0"
xgboost = "2.0.3"
tensorboard = "2.18.0"
colorlog = "^6.9.0"
torch = "2.5.1"
tqdm = "4.67.0"
numpy = "^2.1.3"
scikit-learn = "1.5.2"
joblib = "1.4.2"
lightgbm = "4.5.0"
datasieve = "0.1.7"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
py-find-1st = "^1.1.6"
urllib3 = "^2.2.3"
requests = "^2.32.3"
psutil = "^6.1.0"
python-rapidjson = "^1.20"


[tool.poetry.group.rl.dependencies]
stable-baselines3 = "2.3.2"
sb3-contrib = ">=2.2.1"
gymnasium = "0.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
